# zap_crm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
accounts/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
chat/: consumer.py  models.py  routing.py  urls.py  views.py
conversations/: admin.py  models.py  urls.py
conversations/migrations/: 0001_initial.py
core/: fields.py
templates/: base.html
templates/accounts/: login.html
templates/admin_panel/: base.html  dashboard.html
templates/admin_panel/accounts/: confirm_delete.html  form.html  list.html
templates/admin_panel/assignments/: list.html
templates/admin_panel/conversations/: monitor.html
templates/admin_panel/users/: form.html  list.html
templates/chat/: detail.html  list.html
templates/chat/partials/: message.html
tests/: conftest.py  test_accounts.py  test_chat.py  test_conversations.py  test_webhooks.py  test_whatsapp_config.py
webhooks/: models.py  tasks.py  urls.py  views.py
whatsapp_config/: apps.py  forms.py  models.py  urls.py  user_forms.py  views.py
whatsapp_config/migrations/: 0001_initial.py
zap_crm/: asgi.py  celery.py  settings.py  test_settings.py  urls.py  wsgi.py
